CHATS_SIT/force-app/main/default/objects/Policy_Object_Field__mdt.object
<CustomObject>
    <description>This metadata is used to store mappings to create policy records from county plan &amp; county rate records.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Else_Source_Value__c</fullName>
        <label>Else Source Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Else_Type__c</fullName>
        <label>Else Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                    <default>true</default>
                    <label>Value</label>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object Name</label>
        <referenceTo>Policy_Object__mdt</referenceTo>
        <relationshipName>Policy_Object_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>PEAK_Reference_Table__c</fullName>
        <label>PEAK Reference Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Type_Name__c</fullName>
        <label>Rule Type Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object_API_Name__c</fullName>
        <label>Source Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Value__c</fullName>
        <label>Source Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                    <default>true</default>
                    <label>Value</label>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Logic</fullName>
                </value>
                <value>
                    <fullName>Translate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Conversion Field Mapping</label>
    <pluralLabel>Conversion Field Mappings</pluralLabel>
</CustomObject>